<resources>
    <string name="app_name" translatable="false">MRecorder</string>
    <string name="preference_resolution_title">Resolution</string>
    <string name="preference_resolution_summary">Select the resolution to record at</string>
    <string name="preference_fps_title">Frames per second</string>
    <string name="preference_fps_summary">Choose fps to record at</string>
    <string name="preference_bit_title">Bit rate</string>
    <string name="preference_bit_summary">Choose bit rate</string>
    <string name="preference_audio_record_title">Record audio</string>
    <string name="preference_audio_record_summary">Records audio from mic along with screen video
    </string>
    <string name="preference_save_location_title">Save location</string>
    <string name="res_key" translatable="false">resolution</string>
    <string name="fps_key" translatable="false">fps</string>
    <string name="bitrate_key" translatable="false">bitrate</string>
    <string name="audiorec_key" translatable="false">audiorec</string>
    <string name="savelocation_key" translatable="false">savelocation</string>
    <string name="filename_key" translatable="false">filename</string>
    <string name="preference_filename_format_title">File name format</string>
    <string name="fileprefix_key" translatable="false">fileprefix</string>
    <string name="preference_filename_prefix_title">File name prefix</string>
    <string name="storage_permission_request_title">Allow Storage Permission</string>
    <string name="storage_permission_request_summary">Write permission to storage is required to
        save the recorded video.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="screen_recording_permission_denied">Screen Recording Permission Denied</string>
    <string name="screen_recording_notification_title">Screen recording</string>
    <string name="screen_recording_notification_action_stop">Stop</string>
    <string name="screen_recording_notification_action_pause">Pause</string>
    <string name="screen_recording_notification_action_resume">Resume</string>
    <string name="fatal_exception_message">ScreenRecorder: Fatal Exception occurred. Log has been
        sent
    </string>
    <string name="about_activity_label">About</string>
    <string name="snackbar_storage_permission_message">Grant storage perm</string>
    <string name="snackbar_storage_permission_action_enable">ENABLE</string>
    <string name="menu_about_title">About</string>
    <string name="about_credits">Credits</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_opensource">Open Source</string>
    <string name="app_icon_credit_Niko">App Icons by %1$s\n\nwebsite: %2$s</string>
    <string name="video_editor_library_credit">Video Editor by %1$s\n\nGithub url: %2$s\n\nLicense:
        %3$s
    </string>
    <string name="analytics_library_credit">Crash reporting and analytics SDK by %1$s\n\nGithub url:
        %2$s\n\nLicense: %3$s
    </string>
    <string name="opensource_info">This app is opensourced and the source could be obained at
        \n\nGithub url: %1$s\n\nLicense: %2$s
    </string>
    <string name="fab_record_hint">Start recording</string>
    <string name="recording_failed_toast">Screen recording failed.</string>
    <string name="screenrecording_already_active_toast">Screen recording session already active
    </string>
    <string name="large_resolution_selected_toast">The selected resolution is larger than display
        resolution. Using %1$s resolution instead
    </string>
    <string name="shortcut_short_label">Record</string>
    <string name="shortcut_long_label">Quick Record</string>
    <string name="shortcut_disabled_message">Recording disabled</string>
    <string name="app_shortcut_action" translatable="false">com.lenovo.screenrecorder.RECORD
    </string>
    <string name="screen_recording_started_toast">Screen recording started</string>
    <string name="screen_recording_stopped_toast">Screen Recording stopped</string>
    <string name="screen_recording_resumed_toast">Screen Recording resumed</string>
    <string name="screen_recording_paused_toast">Screen Recording paused</string>
    <string name="fab_stop_hint">Stop recording</string>
    <string name="share_intent_title">Share recorded</string>
    <string name="share_intent_notification_title">Share recorded video</string>
    <string name="share_intent_notification_content">click to share the recorded video</string>
    <string name="share_intent_notification_action_text">Share</string>
    <string name="preference_floating_control_title">Use Floating Controls</string>
    <string name="preference_floating_control_summary">Enable/Disable floating controls which draws
        over every screen
    </string>
    <string name="preference_floating_control_key" translatable="false">floating_controls</string>
    <string name="tab_settings_title">Settings</string>
    <string name="tab_videos_title">Videos</string>
    <string name="picFragment_title">Photos</string>
    <string name="tab_tools_title">Tools</string>
    <string name="storage_permission_denied_message">Storage permission denied</string>
    <string name="video_list_permission_denied_message">存储权限被拒绝</string>
    <string name="video_list_no_video_message">No videos available</string>
    <string name="alert_title_create_folder">Create Folder</string>
    <string name="alert_message_create_folder">Enter folder name</string>
    <string name="prefs_category_video_settings_title">Video settings</string>
    <string name="prefs_category_audio_settings_title">Audio settings</string>
    <string name="prefs_category_save_options_title">Save options</string>
    <string name="prefs_category_recording_settings_title">Recording Settings</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="preference_show_touch_title">Show touches</string>
    <string name="preference_show_touch_summary">Enable/disable touch</string>
    <string name="preference_show_touch_key" translatable="false">touch_pointer</string>
    <string name="alert_plugin_not_found_title">Plugin not found</string>
    <string name="alert_plugin_not_found_message">Plugin is required to show touches. Do you want to
        buy it now?
    </string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_permission_denied_message">The app requires storage permission to save the
        recorded video and change default save directory.The app is rendered useless without the
        permission\n\nDo you want to grant it now?
    </string>
    <string name="edit_intent_notification_action_text">Edit</string>
    <string name="prefs_category_analytics_title">Anonymous analytics</string>
    <string name="preference_crash_reporting_title">Crash reporting</string>
    <string name="preference_crash_reporting_summary">Enable anonymous crash reporting</string>
    <string name="preference_crash_reporting_key" translatable="false">crash_reporting</string>
    <string name="preference_anonymous_statistics_title">Anonymous statistics</string>
    <string name="preference_anonymous_statistics_summary">Enable anonymous statistics on number of
        app usages
    </string>
    <string name="preference_anonymous_statistics_key" translatable="false">usage_statistics
    </string>
    <string name="preference_floating_control_size_title">Floating controls icon size</string>
    <string name="preference_floating_control_size_summary">Set the icon size of on-screen floating
        control
    </string>
    <string name="preference_floating_control_size_key" translatable="false">floatingControlSize
    </string>
    <string name="storage_selection_spinner_title">Select storage</string>
    <string name="external_storage_dir_not_writable">The directory is not writable</string>
    <string name="alert_external_storage_warn_cb_text">Do not show again</string>
    <string name="alert_ext_dir_warning_title">Warning</string>
    <string name="alert_ext_dir_warning_message">Saving to external directory may not work on all
        phones. Proceed with caution.
    </string>
    <string name="prefs_category_experimental_title">Expertmental</string>
    <string name="preference_save_gif_title">Enable saving in GIF</string>
    <string name="preference_save_gif_summary">Enables saving videos as GIF animation</string>
    <string name="preference_save_gif_key" translatable="false">save_gif</string>
    <string name="preference_shake_gesture_title">Shake to start/stop recording</string>
    <string name="preference_shake_gesture_summary">Shake your device to start or stop recording
    </string>
    <string name="preference_shake_gesture_key" translatable="false">shake_gesture</string>
    <string name="screenrecording_waiting_for_gesture_toast">Shake your device to start recording
        when ready
    </string>
    <string name="preference_theme_key" translatable="false">theme</string>
    <string name="prefs_category_theme_title">Theme</string>
    <string name="preference_theme_title">Choose Theme</string>
    <string name="preference_enable_target_app_title">Enable target app</string>
    <string name="preference_enable_target_app_summary">Open target app before recording</string>
    <string name="preference_enable_target_app_key" translatable="false">enable_app_target</string>
    <string name="preference_app_chooser_title">Choose App</string>
    <string name="preference_app_chooser_summary">Choose an app to start by default while
        recording
    </string>
    <string name="preference_app_chooser_key" translatable="false">app_chosen</string>
    <plurals name="delete_video_title">
        <item quantity="zero">Delete video?</item>
        <item quantity="one">Delete video?</item>
        <item quantity="other">Delete videos?</item>
    </plurals>
    <plurals name="delete_video_message">
        <item quantity="zero">Are you sure you want to delete the video?</item>
        <item quantity="one">Are you sure you want to delete the video?</item>
        <item quantity="other">Are you sure you want to delete %1$d videos?</item>
    </plurals>
    <string name="message_exit">Are you sure you want to exit screenshot share tool?</string>
    <string name="exit">Exit screenshot share</string>
    <string name="notification_recording_finished_title">Recording finished, recording file saved
    </string>
    <string name="notification_recording_finished_text">Click to view %s</string>
    <string name="drawing_saved">Picture saved to album！</string>
    <string name="drawing_saved_failed">Failed to save picture!</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="prefs_category_tools_title">Recording tools</string>
    <string name="preference_camera_title">Camera</string>
    <string name="preference_camera_summary">Enables camera</string>
    <string name="preference_camera_key" translatable="false">camera</string>
    <string name="text_recorder_tool">Recorder Tools</string>
    <string name="text_recorder_audio">Recorder audio</string>
    <string name="text_camera">Camera</string>
    <string name="text_part_screen">Part Screen</string>
    <string name="text_show_touchs">Show touches</string>
    <string name="text_water_mark">water mark</string>
    <string name="tab_tools_fragment_item_video_edit">Video editing</string>
    <string name="tab_tools_fragment_item_video_stitch">Video stitching</string>
    <string name="tab_tools_fragment_item_video_change_gif">Video to GIF</string>
    <string name="tab_tools_fragment_item_wifi_transmission">WiFi transmission</string>
    <string name="tab_tools_fragment_item_picture_edit">Picture editing</string>
    <string name="tab_tools_fragment_item_picture_stitch">Picture stitching</string>
</resources>