<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_category_video_settings_title">
        <!--<ListPreference-->
            <!--android:defaultValue="1440x2560"-->
            <!--android:entries="@array/resolutionValues"-->
            <!--android:entryValues="@array/resolutionValues"-->
            <!--android:key="@string/res_key"-->
            <!--android:summary="@string/preference_resolution_summary"-->
            <!--android:title="@string/preference_resolution_title" />-->

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/fpsArray"
            android:entryValues="@array/fpsArray"
            android:key="@string/fps_key"
            android:summary="@string/preference_fps_summary"
            android:title="@string/preference_fps_title" />

        <ListPreference
            android:defaultValue="7130317"
            android:entries="@array/bitrateArray"
            android:entryValues="@array/bitratesValue"
            android:key="@string/bitrate_key"
            android:summary="@string/preference_bit_summary"
            android:title="@string/preference_bit_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_audio_settings_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/audiorec_key"
            android:summary="@string/preference_audio_record_summary"
            android:title="@string/preference_audio_record_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_category_save_options_title">
        <com.ethan.screencapture.folderpicker.FolderChooser
            android:key="@string/savelocation_key"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/preference_save_location_title" />
        <ListPreference
            android:defaultValue="yyyyMMdd_hhmmss"
            android:entries="@array/filename"
            android:entryValues="@array/filename"
            android:key="@string/filename_key"
            android:title="@string/preference_filename_format_title" />
        <EditTextPreference
            android:defaultValue="recording"
            android:key="@string/fileprefix_key"
            android:summary="Enter a prefix for the saved file name"
            android:title="@string/preference_filename_prefix_title" />
    </PreferenceCategory>
    <!--去除匿名统计，和崩溃报告 ethan-->
    <!--<PreferenceCategory-->
        <!--android:title="@string/prefs_category_analytics_title">-->
        <!--<CheckBoxPreference-->
            <!--android:title="@string/preference_crash_reporting_title"-->
            <!--android:summary="@string/preference_crash_reporting_summary"-->
            <!--android:key="@string/preference_crash_reporting_key"-->
            <!--android:defaultValue="false" />-->
        <!--<CheckBoxPreference-->
            <!--android:title="@string/preference_anonymous_statistics_title"-->
            <!--android:summary="@string/preference_anonymous_statistics_summary"-->
            <!--android:key="@string/preference_anonymous_statistics_key"-->
            <!--android:defaultValue="false"-->
            <!--android:dependency="@string/preference_crash_reporting_key"/>-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory
        android:title="@string/prefs_category_theme_title" >
        <ListPreference
            android:title="@string/preference_theme_title"
            android:defaultValue="light_theme"
            android:entries="@array/themeArray"
            android:entryValues="@array/themeValues"
            android:key="@string/preference_theme_key" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_category_recording_settings_title">
        <CheckBoxPreference
            android:title="@string/preference_floating_control_title"
            android:summary="@string/preference_floating_control_summary"
            android:key="@string/preference_floating_control_key"
            android:defaultValue="false" />
        <!--<com.lenovo.screencapture.preference.SeekBarPreference-->
            <!--android:key="@string/preference_floating_control_size_key"-->
            <!--android:summary="@string/preference_floating_control_size_summary"-->
            <!--android:title="@string/preference_floating_control_size_title"-->
            <!--android:text=" DP"-->
            <!--android:defaultValue="100"-->
            <!--android:max="200"-->
            <!--android:persistent="true"-->
            <!--/>-->
        <!--去除下载显示触摸组件 ethan-->
        <!--<CheckBoxPreference
            android:title="@string/preference_show_touch_title"
            android:summary="@string/preference_show_touch_summary"
            android:key="@string/preference_show_touch_key"
            android:defaultValue="false" />-->

        <CheckBoxPreference
            android:title="@string/preference_enable_target_app_title"
            android:summary="@string/preference_enable_target_app_summary"
            android:key="@string/preference_enable_target_app_key"
            android:defaultValue="false" />

        <com.ethan.screencapture.preference.AppPickerPreference
            android:title="@string/preference_app_chooser_title"
            android:summary="@string/preference_app_chooser_summary"
            android:key="@string/preference_app_chooser_key"
            android:defaultValue="none"
            android:dependency="@string/preference_enable_target_app_key"/>
    </PreferenceCategory>
    <!--去掉gif 和 摇动开始/停止 录音-->
    <!--<PreferenceCategory-->
        <!--android:title="@string/prefs_category_experimental_title"-->
        <!--&gt;-->
        <!--<CheckBoxPreference-->
            <!--android:title="@string/preference_save_gif_title"-->
            <!--android:summary="@string/preference_save_gif_summary"-->
            <!--android:key="@string/preference_save_gif_key"-->
            <!--android:defaultValue="false"-->
            <!--/>-->
        <!--<CheckBoxPreference-->
            <!--android:title="@string/preference_shake_gesture_title"-->
            <!--android:summary="@string/preference_shake_gesture_summary"-->
            <!--android:key="@string/preference_shake_gesture_key"-->
            <!--android:defaultValue="false"-->
            <!--/>-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory android:title="@string/prefs_category_tools_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_camera_key"
            android:summary="@string/preference_camera_summary"
            android:title="@string/preference_camera_title" />
        <Preference
            android:title=""
            android:summary=""
            android:visibility="invisible"
            android:selectable="false"/>
    </PreferenceCategory>
</PreferenceScreen>
